--- a/autosite/app/templates/base.html
+++ b/autosite/app/templates/base.html
@@ -10,26 +10,14 @@
 
 </head>
 <body>
-    <nav class="navbar">
-        <div class="container-fluid">
-            <div class="navbar-header">
-                <a class="navbar-brand" href="#">INFOAUTO</a>
-            </div>
-            <ul class="nav navbar-nav">
-                <li><a href="#">Tirgus</a></li>
-                <li><a href="#">Meklēt</a></li>
-                <li><a href="#">Favorīti</a></li>
-            </ul>
-        </div>
-    </nav>
-
-    <div class="container">
-        {% block content %}
-        <!-- Content goes here -->
-        {% endblock %}
-    </div>
-
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+  <div class="container">
+    <h1>InfoAuto</h1>
+    <a href="#" class="button">Tirgus</a>
+    <a href="#" class="button">Meklēt</a>
+    <a href="#" class="button">Favorīti</a>
+    <br>
+    <a href="#" class="button">Ienākt</a>
+    <a href="#" class="button">Reģistrēties</a>
+  </div>
 </body>
 </html>
