--- a/autosite/app/templates/base_generic.html
+++ b/autosite/app/templates/base_generic.html
@@ -8,7 +8,7 @@
     <title>Your Website</title>
 
     <!-- CSS Files -->
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <link rel="stylesheet" href="{% static 'stylesheet.css' %}">
 </head>
 <body>
     <header>
