--- a/autosite/static/stylesheet.css
+++ b/autosite/static/stylesheet.css
@@ -31,3 +31,20 @@ body {
   .button:hover {
     background-color: #666;
   }
+
+img{
+    width: 400px;
+    height: auto;
+}
+
+.listing_item{
+    display: inline-block;
+    width: 400px;
+    height: 400px;
+    margin: 10px;
+    border: 1px solid #333;
+    border-radius: 4px;
+    padding: 10px;
+    text-align: left;
+    vertical-align: top;
+}
