--- a/autosite/static/stylesheet.css
+++ b/autosite/static/stylesheet.css
@@ -32,10 +32,13 @@ body {
     background-color: #666;
   }
 
-img{
+  img {
     width: auto;
     height: 200px;
-}
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
 
 .listing_item{
     display: inline-block;
@@ -47,4 +50,12 @@ img{
     padding: 10px;
     text-align: left;
     vertical-align: top;
+}
+
+.listing_item a {
+  display: block;
+  width: 100%;
+  height: 100%;
+  text-decoration: none;
+  color: inherit;
 }
