--- a/autosite/app/templates/base_generic.html
+++ b/autosite/app/templates/base_generic.html
@@ -9,25 +9,42 @@
     <!-- CSS Files -->
     <link rel="stylesheet" href="{% static 'stylesheet.css' %}">
 </head>
-<body>
-    <header>
-        <nav>
-            <ul>
-                <li><a href="{% url 'index' %}">Sludinajumi</a></li>
-                <li><a href="{% url 'create_listing' %}">Create Listing</a></li>
-                
-                <!-- Add more navigation items here -->
-                {% if user.is_authenticated %}
-                    <li style="float: right;"><a href="{% url 'logout' %}">Sign Out</a></li>
-                    <li style="float: right;"><a href="#">{{ user.username }}</a></li>
-                {% else %}
-                    <li style="float: right;"><a href="{% url 'login' %}">Login</a></li>
-                    <li style="float: right;"><a href="{% url 'register' %}">Register</a></li>
-                {% endif %}
-            </ul>
-        </nav>
-        
-    </header>
+<header>
+    <nav class="navbar">
+      <div class="nav-left">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'index' %}">Sludinajumi</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'create_listing' %}">Create Listing</a>
+          </li>
+        </ul>
+      </div>
+      <div class="nav-right">
+        <ul class="navbar-nav">
+          <!-- Add more navigation items here -->
+          {% if user.is_authenticated %}
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'logout' %}">Sign Out</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">{{ user.username }}</a>
+            </li>
+          {% else %}
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'login' %}">Login</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'register' %}">Register</a>
+            </li>
+          {% endif %}
+        </ul>
+      </div>
+    </nav>
+  </header>
+  
+  
 
     <main>
         {% block content %}
