--- a/autosite/app/templates/base_generic.html
+++ b/autosite/app/templates/base_generic.html
@@ -47,9 +47,11 @@
   
 
     <main>
+        <div class="container">
         {% block content %}
         <!-- This is where the content from child templates will go -->
         {% endblock content %}
+        </div>
     </main>
 
     <footer>
