--- a/autosite/app/templates/create_listing.html
+++ b/autosite/app/templates/create_listing.html
@@ -1,10 +1,12 @@
 {% extends 'base_generic.html' %}
+{% load i18n %}
+
 
 {% block content %}
-  <h2>Create Listing</h2>
+  <h2>{% trans "Izveidot sludinājumu" %}</h2>
   <form method="post" enctype="multipart/form-data">
     {% csrf_token %}
     {{ form.as_p }}
-    <button type="submit">Create</button>
+    <button type="submit">{% trans "Izveidot" %}</button>
   </form>
 {% endblock %}
