--- a/autosite/app/templates/login.html
+++ b/autosite/app/templates/login.html
@@ -1,10 +1,10 @@
 {% extends 'base_generic.html' %}
-
+{% load i18n %}
 {% block content %}
-  <h2>Login</h2>
+  <h2>{% trans "Ieiet" %}</h2>
   <form method="post">
   {% csrf_token %}
   {{ form.as_p }}
-  <button type="submit">Login</button>
+  <button type="submit">{% trans "Ieiet" %}</button>
   </form>
 {% endblock %}
