--- a/autosite/app/templates/register.html
+++ b/autosite/app/templates/register.html
@@ -1,7 +1,7 @@
 {% extends 'base_generic.html' %}
-
+{% load i18n %}
 {% block content %}
-  <h2>Register</h2>
+  <h2>{% trans "Reģistrēties" %}</h2>
   <form method="post">
   {% csrf_token %}
   {{ form.non_field_errors }}
@@ -17,6 +17,6 @@
         {% endfor %}
     </p>
   {% endfor %}
-  <button type="submit">Register</button>
+  <button type="submit">{% trans "Reģistrēties" %}</button>
   </form>
 {% endblock %}
