Added matching styling to forms

--- a/autosite/app/templates/create_listing.html
+++ b/autosite/app/templates/create_listing.html
@@ -1,12 +1,15 @@
 {% extends 'base_generic.html' %}
 {% load i18n %}
 
-
 {% block content %}
-  <h2>{% trans "Izveidot sludinājumu" %}</h2>
-  <form method="post" enctype="multipart/form-data">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">{% trans "Izveidot" %}</button>
-  </form>
+  <div class="container">
+    <div class="form-container">
+      <h2>{% trans "Izveidot sludinājumu" %}</h2>
+      <form method="post" enctype="multipart/form-data">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <button type="submit">{% trans "Izveidot" %}</button>
+      </form>
+    </div>
+  </div>
 {% endblock %}
