--- a/autosite/app/templates/edit_profile.html
+++ b/autosite/app/templates/edit_profile.html
@@ -1,26 +1,28 @@
 {% extends 'base_generic.html' %}
 {% load i18n %}
 
-
 {% block title %}{% trans "Rediģēt profilu" %}{% endblock %}
 
 {% block content %}
-  <h2>{% trans "Rediģēt profilu" %}</h2>
-  <form method="post">
-  {% csrf_token %}
-  {{ form.non_field_errors }}
-  {% for field in form %}
-    <p>
-        {{ field.label_tag }}<br>
-        {{ field }}
-        {% if field.errors %}
-
-        {% endif %}
-        {% for error in field.errors %}
-        <p style="color: red">{{ error }}</p>
+  <div class="container">
+    <div class="form-container">
+      <h2>{% trans "Rediģēt profilu" %}</h2>
+      <form method="post">
+        {% csrf_token %}
+        {{ form.non_field_errors }}
+        {% for field in form %}
+          <p>
+            {{ field.label_tag }}<br>
+            {{ field }}
+            {% if field.errors %}
+              {% for error in field.errors %}
+                <p class="error">{{ error }}</p>
+              {% endfor %}
+            {% endif %}
+          </p>
         {% endfor %}
-    </p>
-  {% endfor %}
-  <button type="submit">{% trans "Mainīt" %}</button>
-  </form>
+        <button type="submit">{% trans "Mainīt" %}</button>
+      </form>
+    </div>
+  </div>
 {% endblock %}
