--- a/autosite/app/templates/login.html
+++ b/autosite/app/templates/login.html
@@ -1,10 +1,15 @@
 {% extends 'base_generic.html' %}
 {% load i18n %}
+
 {% block content %}
-  <h2>{% trans "Ieiet" %}</h2>
-  <form method="post">
-  {% csrf_token %}
-  {{ form.as_p }}
-  <button type="submit">{% trans "Ieiet" %}</button>
-  </form>
+  <div class="container">
+    <div class="form-container">
+      <h2>{% trans "Ieiet" %}</h2>
+      <form method="post">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <button type="submit">{% trans "Ieiet" %}</button>
+      </form>
+    </div>
+  </div>
 {% endblock %}
