--- a/autosite/static/stylesheet.css
+++ b/autosite/static/stylesheet.css
@@ -9,6 +9,7 @@ body {
   margin: 0 auto;
   padding: 20px;
   text-align: center;
+  padding-top: 80px;
 }
 
 h1 {
@@ -107,4 +108,61 @@ img {
 .nav-left {
   display: flex;
   align-items: center;
+}
+
+.form-container {
+  max-width: 400px;
+  margin: 0 auto; /* Center the form horizontally */
+  padding: 40px;
+  background-color: #ffffff;
+  border-radius: 8px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.form-container h2 {
+  color: #333333;
+  margin-top: 0;
+  margin-bottom: 20px;
+}
+
+.form-container .form-field {
+  margin-bottom: 20px;
+}
+
+.form-container label {
+  display: block;
+  margin-bottom: 5px;
+  color: #333333;
+  font-weight: bold;
+}
+
+.form-container input[type="text"],
+.form-container input[type="password"],
+.form-container input[type="email"],
+.form-container textarea {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #dddddd;
+  border-radius: 4px;
+}
+
+.form-container .error {
+  color: red;
+  margin-top: 5px;
+}
+
+.form-container button[type="submit"] {
+  display: inline-block;
+  padding: 10px 20px;
+  background-color: #333333;
+  color: #ffffff;
+  text-decoration: none;
+  border-radius: 4px;
+  margin-top: 10px;
+  border: none;
+  cursor: pointer;
+}
+
+.form-container button[type="submit"]:hover {
+  background-color: #555555;
 }
