--- a/autosite/static/stylesheet.css
+++ b/autosite/static/stylesheet.css
@@ -229,3 +229,55 @@ footer {
   object-fit: cover;
   object-position: center;
 }
+
+#filter-sort-fields {
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  grid-gap: 10px;
+  max-width: 90%; /* Set a maximum width for the container */
+  margin: 0 auto; /* Center the container horizontally */
+}
+
+#filter-sort-fields > * {
+  height: 35px;
+  margin-left: 5px;
+  margin-right: 5px;
+  width: 150px;
+  margin-bottom: 10px;
+}
+
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
+
+.bookmark-filter{
+  margin-top: 30px;
+  height: 35px; 
+}
+
+.bookmark-filter input[type="checkbox"] {
+  transform: scale(1.5); /* Increase checkbox size */
+}
+
+.bookmark-filter label {
+  font-size: 18px; /* Increase label font size */
+}
+
+#apply-button{
+  background-color: rgb(165, 253, 165);
+}
+
+#reset-button{
+  background-color: rgb(248, 171, 171);
+}
+
+.listings-class{
+ text-align: center;
+}
