--- a/autosite/app/templates/listing_list.html
+++ b/autosite/app/templates/listing_list.html
@@ -61,9 +61,15 @@
     {% if user.is_authenticated %}
     <div class="bookmark-filter">
       <input type="checkbox" name="only_bookmarks" value="true" {% if request.GET.only_bookmarks %}checked{% endif %}>
-      <label for="only_bookmarks">Show only bookmarked listings</label>
-    {% endif %}
+      <label for="only_bookmarks">Rādīt tikai atzīmētos</label>
+      <input type="checkbox" name="only_owned" value="true" {% if request.GET.only_owned %}checked{% endif %}>
+      <label for="only_owned">Rādīt tikai savus</label>
     </div>
+    <div class="owned-filter">
+      
+    </div>
+    {% endif %}
+    
   </form>
 
   <!-- Listings -->
@@ -82,11 +88,20 @@
           </button>
       </div>
       <div class="right-child">
-          {% if listing.id in bookmarked_listing_ids %}
+
             <img id="bookmark-indicator-{{ listing.id }}" style="display: {% if listing.id in bookmarked_listing_ids %}block{% else %}none{% endif %}" src="/static/pngwing.com.png" alt="This listing is bookmarked">
+
+
+          {% if user.is_authenticated %}
+            {% if user.is_staff or user == listing.User %}
+              <form method="POST" action="{% url 'delete_listing' listing.id %}">
+                {% csrf_token %}
+                <input type="submit" value="Delete">
+              </form>
+            {% endif %}
           {% endif %}
       </div>
-    {% endif %}
+          {% endif %}
       </div>
       <a href="{{ listing.Link }}" target="_blank" rel="noopener noreferrer">
         <h3>{{ listing.Car.Make }} {{ listing.Car.Model }}</h3>
