added image compression on manual create

--- a/autosite/app/templates/base_generic.html
+++ b/autosite/app/templates/base_generic.html
@@ -80,7 +80,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2023 Your Website</p>
+        <p>&copy; 2023 LUDF Rasiņš, Ošs</p>
     </footer>
 
     <!-- JS Files -->
